# salvo-admin

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  deploy.sh  deployment.sh
.run/: salvo-dev.run.xml
docs/: banner.http  http-client.env.json  member.http  request.http  title.http  type.http  user.http
docs/sql/: interview_banner.sql  interview_member.sql  interview_title.sql  interview_type.sql  interview_types.sql  sys_menu.sql  sys_menu_role.sql  sys_role.sql  sys_role_user.sql  sys_user.sql
docs/sql/system/: sys_dict_data.sql  sys_dict_type.sql  sys_post.sql  sys_user.sql
docs/sql/v2/: sys_dept.sql  sys_dict.sql  sys_menu.sql  sys_post.sql  sys_role.sql  sys_role_dept.sql  sys_role_menu.sql  sys_tenant.sql  sys_user.sql  sys_user_post.sql  sys_user_role.sql
docs/test/: http-client.env.json
docs/test/system/: sys_dept.http  sys_dict_data.http  sys_dict_type.http  sys_notice.http  sys_user.http
src/: main.rs
src/common/: error.rs  result.rs  result_page.rs
src/config/: log4rs.yaml
src/handler/: banner_handler.rs  member_handler.rs  menu_handler.rs  mod.rs  role_handler.rs  title_handler.rs  type_handler.rs  types_handler.rs  user_handler.rs
src/handler/system/: menu_handler.rs  mod.rs  role_handler.rs  sys_dept_handler.rs  sys_dict_data_handler.rs  sys_dict_type_handler.rs  sys_login_log_handler.rs  sys_menu_handler.rs  sys_notice_handler.rs  sys_operate_log_handler.rs  sys_post_handler.rs  sys_role_handler.rs  sys_user_handler.rs  user_handler.rs
src/middleware/: auth.rs  mod.rs
src/model/: banner.rs  entity.rs  interview_type.rs  member.rs  menu.rs  mod.rs  role.rs  role_menu.rs  title.rs  types.rs  user.rs  user_role.rs
src/model/system/: menu.rs  mod.rs  role.rs  role_menu.rs  sys_dept_model.rs  sys_dict_data_model.rs  sys_dict_type_model.rs  sys_login_log_model.rs  sys_menu_model.rs  sys_notice_model.rs  sys_operate_log_model.rs  sys_post_model.rs  sys_role_dept_model.rs  sys_role_menu_model.rs  sys_role_model.rs  sys_user_model.rs  sys_user_post_model.rs  sys_user_role_model.rs  user.rs  user_role.rs
src/routes/: mod.rs
src/routes/system/: menu_route.rs  mod.rs  role_route.rs  sys_dept_route.rs  sys_dict_data_route.rs  (+9 more)
src/utils/: auth.rs  error.rs  jwt_util.rs  mod.rs  redis_util.rs  user_agent_util.rs
src/vo/: banner_vo.rs  member_vo.rs  menu_vo.rs  mod.rs  role_vo.rs  title_vo.rs  type_vo.rs  types_vo.rs  user_vo.rs
(+26 files in other folders)
