[package]
name = "salvo-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.82.0" }

tokio = { version = "1", features = ["macros"] }
#tracing = "0.1"
#tracing-subscriber = "0.3"

serde = { version = "1.0", features = ["derive"] }

log = "0.4"
log4rs = "1.0"

rbs = { version = "4.6"}
rbatis = { version = "4.6", features = [] }
#rbatis = { version = "4.0",features = ["debug_mode"]}
rbdc-mysql={version="4.6"}

jsonwebtoken = "9.3.0"

redis = "0.32.3"

thiserror = "2.0.3"

once_cell = "1.18.0"
regex = "1.11.1"
config = "0.15.9"